Add header topography

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Meme Generator</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body onload="onInit()">
+
     <header class="main-header">
-        
+        <img class="logo" src="/imgs/logo/logo.jpg" alt="">
+        <ul class="main-nav-list">
+            <li><a href="#">Memes</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
     </header>
+
+    <input class="search" type="text" placeholder="Search" oninput="onFilterInput()" >
     <section class="img-container">
 
     </section>
@@ -17,6 +25,7 @@
     <script src="/js/services/utility.service.js"></script>
     <script src="/js/services/storage.service.js"></script>
     <script src="/js/services/images.service.js"></script>
+    <script src="/js/meme.controler.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
