Add data structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </header>
 
-    <input class="search" type="text" placeholder="Search" oninput="onFilterInput()" >
+    <input class="search-img" type="text" placeholder="Search" oninput="onFilterInput()" >
     <section class="img-container">
 
     </section>
