Render images add filter

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         </ul>
     </header>
 
-    <input class="search-img" type="text" placeholder="Search" oninput="onFilterInput()" >
+    <input class="search-img" type="text" placeholder="   Search" oninput="onFilterInput()" >
     <section class="img-container">
-
+        <!-- <img id="1" src="/imgs/square/3.jpg"  alt="">
+        <img src="/imgs/square/1.gpg" alt=""> -->
     </section>
 
     <script src="/js/services/utility.service.js"></script>
