--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="onInit()">
 
     <header class="main-header">
-        <img class="logo" src="/imgs/logo/logo.jpg" alt="">
+        <img class="logo" src="imgs/logo/logo.jpg" alt="">
         <ul class="main-nav-list">
             <li><a href="#">Memes</a></li>
             <li><a href="#">Gallery</a></li>
@@ -23,10 +23,10 @@
         <img src="/imgs/square/1.gpg" alt=""> -->
     </section>
 
-    <script src="/js/services/utility.service.js"></script>
-    <script src="/js/services/storage.service.js"></script>
-    <script src="/js/services/images.service.js"></script>
-    <script src="/js/meme.controler.js"></script>
+    <script src="js/services/utility.service.js"></script>
+    <script src="js/services/storage.service.js"></script>
+    <script src="js/services/images.service.js"></script>
+    <script src="js/meme.controler.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
