--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <header class="main-header">
         <img class="logo" src="imgs/logo/logo.jpg" alt="">
         <ul class="main-nav-list">
-            <li><a href="#">Memes</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="editmeme.html">Memes</a></li>
+            <li><a href="index.html">Gallery</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </header>
 
     <input class="search-img" type="text" placeholder="   Search" oninput="onFilterInput()" >
     <section class="img-container">
-        <!-- <img id="1" src="/imgs/square/3.jpg"  alt="">
-        <img src="/imgs/square/1.gpg" alt=""> -->
     </section>
 
     <script src="js/services/utility.service.js"></script>
