More functions for meme controller

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="js/services/utility.service.js"></script>
     <script src="js/services/storage.service.js"></script>
     <script src="js/services/images.service.js"></script>
+    <script src="js/gallery.controler.js"></script>
     <script src="js/meme.controler.js"></script>
-    <script src="js/main.js"></script>
 </body>
 </html>
