Change to one page sln

--- a/editmeme.html
+++ b/editmeme.html
@@ -6,7 +6,7 @@
     <title>Meme Editor</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body onload="onLoadEditor()">
+<!-- <body onload="onLoadEditor()">
     <header class="main-header">
         <img class="logo" src="imgs/logo/logo.jpg" alt="">
         <ul class="main-nav-list">
@@ -58,5 +58,5 @@
     <script src="js/services/images.service.js"></script>
     <script src="js/gallery.controler.js"></script>
     <script src="js/meme.controler.js"></script>
-</body>
+</body> -->
 </html>
