--- a/index.html
+++ b/index.html
@@ -16,10 +16,49 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </header>
-
+    <!-- Gallery HTML -->
     <input class="search-img" type="text" placeholder="   Search" oninput="onFilterInput()" >
     <section class="img-container">
     </section>
+    <!-- End Gallery HTML -->
+
+    <main class="editor-grid" style="display: none;">
+        <a class="back-gallery" href="index.html">Back to Gallery</a>
+        <div class="canvas-container">
+            <canvas width="450" height="450" onclick="onCanvasClick(event)"></canvas>
+        </div>
+        <form class="meme-settings" action="">
+            <div class="lines-switch-canvas">
+                <p>Edit Text Lines</p> 
+                <button class="select-line edit-buttons">1/2</button>
+                <button class="change-lines edit-buttons"><img src="imgs/buttons/up-down.jpg"/></button>
+                <button class="add-line edit-buttons"><img src="imgs/buttons/add-plus.jpg"/></button>
+                <button class="delete-line edit-buttons"><img src="imgs/buttons/trash.jpg"/></button>
+            </div>
+
+            <ul class="font-settings-list">
+                <li><a href="#"></a>
+                    <select id="font-selector" placeholder="impact">
+                        <option value="impact">impact</option>
+                        <option value="Arial">Arial</option>
+                        <option value="Times">Times</option>
+                        <option value="Courier">Courier</option>
+                      </select>             
+                </li>
+                <li class="lawer-case"><a href="#">a</a></li>
+                <li class="upper-case"><a href="#">A</a></li>
+                <li class="text-left"><a href="#">=</a></li>
+                <li class="text-center"><a href="#">=</a></li>
+                <li class="text-right"><a href="#">=</a></li>
+                <li class="text-art"><a href="#">Art</a></li>
+                <li class="text-draw"><a href="#">Pencil</a></li>
+            </ul>
+            <input class="search-img add-text" type="text" placeholder=" insert text" oninput="onTextInput()" >
+    
+
+        </form>
+    </main>
+
 
     <script src="js/services/utility.service.js"></script>
     <script src="js/services/storage.service.js"></script>
