--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <button class="add-line edit-buttons" onclick="onAddLine(event)"><img src="imgs/buttons/add-plus.jpg"/></button>
                 <button class="delete-line edit-buttons"><img src="imgs/buttons/trash.jpg"/></button>
             </div>
-
             <ul class="font-settings-list">
                 <li><a href="#"></a>
                     <select id="font-selector" placeholder="impact">
@@ -54,8 +53,7 @@
                 <li class="text-draw"><a href="#">Pencil</a></li>
             </ul>
             <input class="search-img add-text" type="text" placeholder=" insert text" oninput="onTextInput()" >
-    
-
+            <button class="share">Share</button>
         </div>
     </main>
 
