--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <li class="text-draw"><a href="#">Pencil</a></li>
             </ul>
             <input class="search-img add-text" type="text" placeholder=" insert text" oninput="onTextInput()" >
-            <button class="share">Share</button>
         </div>
+        <button class="share" onclick="uploadImg(event)">Share</button>
     </main>
 
 
@@ -62,6 +62,7 @@
     <script src="js/services/storage.service.js"></script>
     <script src="js/services/images.service.js"></script>
     <script src="js/services/meme.service.js"></script>
+    <script src="js/services/upload.service.js"></script>
     <script src="js/gallery.controler.js"></script>
     <script src="js/meme.controler.js"></script>
 </body>
