--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="editor-grid" style="display: none;">
         <a class="back-gallery" href="index.html">Back to Gallery</a>
         <div class="canvas-container">
-            <canvas width="450" height="450" onclick="onCanvasClick(event)"></canvas>
+            <canvas width="500" height="500" onclick="onCanvasClick(event)"></canvas>
         </div>
         <div class="meme-settings" >
             <div class="lines-switch-canvas">
@@ -49,8 +49,8 @@
                 <li class="text-left"><a href="#">=</a></li>
                 <li class="text-center"><a href="#">=</a></li>
                 <li class="text-right"><a href="#">=</a></li>
-                <li class="text-art"><a href="#">Art</a></li>
-                <li class="text-draw"><a href="#">Pencil</a></li>
+                <li class="text-art"><a href="#">stroke</a></li>
+                <li class="text-draw"><a href="#">fill</a></li>
             </ul>
             <input class="search-img add-text" type="text" placeholder=" insert text" oninput="onTextInput()" >
         </div>
