--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                         <option value="Courier">Courier</option>
                       </select>             
                 </li>
-                <li class="lawer-case"><a href="#">a</a></li>
-                <li class="upper-case"><a href="#">A</a></li>
-                <li class="text-left"><a href="#">=</a></li>
-                <li class="text-center"><a href="#">=</a></li>
-                <li class="text-right"><a href="#">=</a></li>
-                <li class="text-art"><a href="#">stroke</a></li>
-                <li class="text-draw"><a href="#">fill</a></li>
+                <li class="lawer-case edit-buttons"><a href="#"><img src="imgs/buttons/aA.jpg"/></a></li>
+                <li class="upper-case edit-buttons"><a href="#"><img src="imgs/buttons/Ap.jpg"/></a></li>
+                <li class="text-left edit-buttons"><a href="#"><img src="imgs/buttons/left.jpg"/></a></li>
+                <li class="text-center edit-buttons"><a href="#"><img src="imgs/buttons/center.jpg"/></a></li>
+                <li class="text-right edit-buttons"><a href="#"><img src="imgs/buttons/right.jpg"/></a></li>
+                <li class="text-art edit-buttons"><a href="#"><img src="imgs/buttons/stroke.jpg"/></a></li>
+                <li class="text-draw edit-buttons"><a href="#"><img src="imgs/buttons/fill.jpg"/></a></li>
             </ul>
             <input class="search-img add-text" type="text" placeholder=" insert text" oninput="onTextInput()" >
         </div>
