--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <div class="lines-switch-canvas">
                 <p>Edit Text Lines</p> 
                 <button class="select-line edit-buttons">1</button>
-                <button class="change-lines edit-buttons"><img src="imgs/buttons/up-down.jpg"/></button>
+                <button class="change-lines edit-buttons" onclick="changeLine()"><img src="imgs/buttons/up-down.jpg" /></button>
                 <button class="add-line edit-buttons" onclick="onAddLine(event)"><img src="imgs/buttons/add-plus.jpg"/></button>
-                <button class="delete-line edit-buttons"><img src="imgs/buttons/trash.jpg"/></button>
+                <button class="delete-line edit-buttons" onclick="onDeleteLine(event)"><img src="imgs/buttons/trash.jpg"/></button>
             </div>
             <ul class="font-settings-list">
                 <li><a href="#"></a>
